--- a/Transfert de style artistique avec TensorFlow Lite.ipynb
+++ b/Transfert de style artistique avec TensorFlow Lite.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "    return img\n",
     "\n",
-    "# Pré-process de l'image : recadrer l'image centrale et redimensionnement\n",
+    "# Pré-process de l'image : recadrer l'image au centre et redimensionnement\n",
     "def preprocess_image(image, target_dim):\n",
     "  # Redimensionnement de l'image de sorte que la dimension la plus courte devienne 256px\n",
     "    shape = tf.cast(tf.shape(image)[1:-1], tf.float32)\n",
